DeserializeObject of POST

--- a/SetupEnviromentVariable/EnvironmentVariables/EnvironmentVariables.csproj
+++ b/SetupEnviromentVariable/EnvironmentVariables/EnvironmentVariables.csproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Nancy" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="RestSharp" Version="108.0.3" />
+    <PackageReference Include="System.Json" Version="4.7.1" />
   </ItemGroup>
 
 
